# src/routes-alternative/volcano/index.js
@@ -2,7 +2,7 @@ const router = require('express').Router({ mergeParams: true });
 const authenticateToken = require('./middleware/auth.middleware');
 const volcanoRoute = require('./volcano');
 const eruptionsRoute = require('./eruptions');
-const imagesRoute = require('./images');
+const commentsRoute = require('./comments');
 
 // --------------------- Middleware ---------------------
 router.use(authenticateToken); // Authentication Middleware (Used for all routes)
@@ -10,7 +10,7 @@ router.use(authenticateToken); // Authentication Middleware (Used for all routes
 // --------------------- Routes ---------------------
 router.use('/:id', volcanoRoute);
 router.use('/:id/eruptions', eruptionsRoute);
-router.use('/:id/images', imagesRoute);
+router.use('/:id/comments', commentsRoute);
 
 // Export the router
 module.exports = router;
