# src/routes/volcano/index.js
@@ -30,8 +30,11 @@ router.get('/', async (req, res, next) => {
     }
 });
 
-// Images Router
-router.use('/images', require('./image'));
+// Comments Router
+router.use('/comments', require('./comments'));
+
+// Comment Router
+router.use('/comment/:commentID', require('./comment'));
 
 // Eruptions Router
 router.use('/eruptions', require('./eruption'));
